--- a/demos/TuioJSON Protocol Gestures.html
+++ b/demos/TuioJSON Protocol Gestures.html
@@ -98,7 +98,7 @@
 	ontouchend="this.style.backgroundColor='white';"
 	onclick=""></div>
 	
-	<div id="red" ongesturechange="gest(event);"></div>
+	<div id="red"></div>
 	
 </body>
 </html>
